--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings 配置站点
-title: '廖柯宇的独立博客'
-description: '昵称悟空，千禧一代，前端开发者/伪极客/灵魂摄影师，热爱技术&设计。很高兴能在这里与你分享我对技术和生活的思考。'
-keyword: '廖柯宇, 廖柯宇的独立博客, 廖柯宇的博客, 前端, 前端开发, 前端博客, javascript, vuejs, nodejs, 设计'
+title: 'Lixinying Blog'
+description: 'Nickname Gail，Enthusiastic about the value of data/pseudo-geek/marathon enthusiast.I am very glad to be here to share with you my thoughts on technology and life.'
+keyword: 'Gail, Gail‘s Blog, Data,  Data Analysis， Data mining， Python , Spark , Hive... '
 url: '' # your host
 
 # when build blog on server, if you don't need baseurl, you should leave this value blank.
@@ -24,9 +24,9 @@ footer:
   since: 2017
 
 # Author 配置博主信息
-author: '廖柯宇'
-nickname: '悟空'
-bio: '前端开发者，热爱技术&设计，简单乐观爱创造'
+author: 'Lixinying'
+nickname: 'Gail'
+bio: 'System Analysis Fresh Graduate，Kee on data analytics，Love exploring the value of data'
 avatar: '/assets/img/profile.png'
 
 # Search
