--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ footer:
 # Author 配置博主信息
 author: 'Lixinying'
 nickname: 'Gail'
-bio: 'System Analysis Fresh Graduate，Kee on data analytics，Love exploring the value of data'
+bio: 'System Analysis Fresh Graduate，Keen on data analytics，Love exploring the value of data'
 avatar: '/assets/img/profile.png'
 
 # Search
